no pick date component, instead built many basic components to practice passing props

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,14 @@
     transform: rotate(360deg);
   }
 }
+
+/* My styles start here ************************************************** */
+
+article {
+  background: #282c34;
+}
+
+article img{
+  width: 100%;
+  max-width: 1000px;
+}
